tests/golden/oauth2-proxy/prometheus/prometheus/01_secret_oauth2-proxy.yaml
apiVersion: v1
data: {}
kind: Secret
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/part-of: syn
    name: oauth2-proxy
  name: oauth2-proxy
  namespace: syn-prometheus
stringData:
  clientSecret: EXAMPLESECRET
  cookieSecret: EXAMPLESECRETEXA
type: Opaque
