tests/golden/oauth2-proxy/prometheus/prometheus/20_default-instance_prometheus_roleBindingSpecificNamespaces.yaml
apiVersion: rbac.authorization.k8s.io/v1
items:
  - apiVersion: rbac.authorization.k8s.io/v1
    kind: RoleBinding
    metadata:
      labels:
        app.kubernetes.io/component: prometheus
        app.kubernetes.io/instance: default-instance
        app.kubernetes.io/name: prometheus
        app.kubernetes.io/part-of: kube-prometheus
        app.kubernetes.io/version: 2.32.1
      name: prometheus-default-instance
      namespace: default
    roleRef:
      apiGroup: rbac.authorization.k8s.io
      kind: Role
      name: prometheus-default-instance
    subjects:
      - kind: ServiceAccount
        name: prometheus-default-instance
        namespace: syn-prometheus
  - apiVersion: rbac.authorization.k8s.io/v1
    kind: RoleBinding
    metadata:
      labels:
        app.kubernetes.io/component: prometheus
        app.kubernetes.io/instance: default-instance
        app.kubernetes.io/name: prometheus
        app.kubernetes.io/part-of: kube-prometheus
        app.kubernetes.io/version: 2.32.1
      name: prometheus-default-instance
      namespace: kube-system
    roleRef:
      apiGroup: rbac.authorization.k8s.io
      kind: Role
      name: prometheus-default-instance
    subjects:
      - kind: ServiceAccount
        name: prometheus-default-instance
        namespace: syn-prometheus
  - apiVersion: rbac.authorization.k8s.io/v1
    kind: RoleBinding
    metadata:
      labels:
        app.kubernetes.io/component: prometheus
        app.kubernetes.io/instance: default-instance
        app.kubernetes.io/name: prometheus
        app.kubernetes.io/part-of: kube-prometheus
        app.kubernetes.io/version: 2.32.1
      name: prometheus-default-instance
      namespace: syn-prometheus
    roleRef:
      apiGroup: rbac.authorization.k8s.io
      kind: Role
      name: prometheus-default-instance
    subjects:
      - kind: ServiceAccount
        name: prometheus-default-instance
        namespace: syn-prometheus
kind: RoleBindingList
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/part-of: syn
