tests/golden/oauth2-proxy/prometheus/prometheus/20_default-instance_prometheus_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: default-instance
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 2.32.1
  name: prometheus-default-instance
  namespace: syn-prometheus
spec:
  ports:
    - name: web
      port: 9090
      targetPort: web
    - name: reloader-web
      port: 8080
      targetPort: reloader-web
    - name: rbac
      port: 4181
      targetPort: 4181
  selector:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: default-instance
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
  sessionAffinity: ClientIP
