tests/golden/oauth2-proxy/prometheus/prometheus/20_default-instance_prometheus_serviceAccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: default-instance
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 2.32.1
  name: prometheus-default-instance
  namespace: syn-prometheus
