tests/golden/oauth2-proxy/prometheus/prometheus/30_default-instance_alertmanager_authIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/part-of: syn
  name: alertmanager-alertmanager-default-instance
  namespace: syn-prometheus
spec:
  rules:
    - host: alertmanager.example.com
      http:
        paths:
          - backend:
              service:
                name: alertmanager-alertmanager-default-instance-auth
                port:
                  number: 4180
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - alertmanager.example.com
      secretName: alertmanager-alertmanager-default-instance-tls
