tests/golden/oauth2-proxy/prometheus/prometheus/30_default-instance_alertmanager_serviceAccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  annotations:
    source: https://github.com/projectsyn/component-prometheus
  labels:
    app.kubernetes.io/component: alert-router
    app.kubernetes.io/instance: alertmanager-default-instance
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.23.0
  name: alertmanager-alertmanager-default-instance
  namespace: syn-prometheus
